--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="register">Register</string>
     <string name="sign_in">sign in</string>
     <string name="sign_up">Sign Up</string>
+    <string name="my_ad">My Ad</string>
 </resources>
